--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,15 +14,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_marginStart="50dp"
-            android:layout_marginEnd="50dp">
+            android:layout_marginEnd="50dp"
+            android:orientation="vertical">
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="160dp"
-                android:layout_marginBottom="55dp"
                 android:layout_marginTop="18dp"
+                android:layout_marginBottom="55dp"
                 android:contentDescription="@string/logo"
                 android:scaleType="fitCenter"
                 android:src="@drawable/logo" />
@@ -36,44 +36,35 @@
 
             <AutoCompleteTextView
                 android:id="@+id/email_log_txt"
-                android:inputType="textEmailAddress"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/rounded_rect"
-                android:drawablePadding="10dp"
                 android:drawableStart="@drawable/icon_person"
+                android:drawablePadding="10dp"
                 android:hint="@string/emailReg"
-                android:paddingEnd="10dp"
+                android:inputType="textEmailAddress"
                 android:paddingStart="10dp"
+                android:paddingEnd="10dp"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
                 android:textSize="15sp" />
 
             <AutoCompleteTextView
                 android:id="@+id/password_log_txt"
-                android:inputType="textPassword"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/rounded_rect"
-                android:drawablePadding="10dp"
                 android:drawableStart="@drawable/icon_password"
+                android:drawablePadding="10dp"
                 android:hint="@string/passwordReg"
-                android:paddingEnd="10dp"
+                android:inputType="textPassword"
                 android:paddingStart="10dp"
+                android:paddingEnd="10dp"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
                 android:textSize="15sp" />
-
-            <TextView
-                android:id="@+id/forgot_password_log_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="3dp"
-                android:layout_marginBottom="3dp"
-                android:text="@string/forgot_password"/>
 
             <Button
                 android:id="@+id/sign_in_btn"
@@ -81,8 +72,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/btn_gradient"
+                android:onClick="signIn"
                 android:text="@string/sign_inLog"
-                android:textColor="#FFFFFF"/>
+                android:textColor="#FFFFFF" />
 
             <TextView
                 android:id="@+id/register_log_txt"
@@ -90,6 +82,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp"
+                android:onClick="startRegister"
                 android:text="@string/signup_redirect" />
 
         </LinearLayout>
