--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -14,15 +14,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_marginStart="50dp"
-            android:layout_marginEnd="50dp">
+            android:layout_marginEnd="50dp"
+            android:orientation="vertical">
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="160dp"
-                android:layout_marginBottom="55dp"
                 android:layout_marginTop="18dp"
+                android:layout_marginBottom="55dp"
                 android:contentDescription="@string/logo"
                 android:scaleType="fitCenter"
                 android:src="@drawable/logo" />
@@ -34,51 +34,49 @@
                 android:contentDescription="@string/join_us_description"
                 android:src="@drawable/joinus_text" />
 
-
             <AutoCompleteTextView
                 android:id="@+id/username_registration_txt"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/rounded_rect"
-                android:drawablePadding="10dp"
                 android:drawableStart="@drawable/icon_person"
+                android:drawablePadding="10dp"
                 android:hint="@string/usernameReg"
-                android:paddingEnd="10dp"
                 android:paddingStart="10dp"
+                android:paddingEnd="10dp"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
                 android:textSize="15sp" />
 
-
             <AutoCompleteTextView
                 android:id="@+id/email_registration_txt"
-                android:inputType="textEmailAddress"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/rounded_rect"
-                android:drawablePadding="10dp"
                 android:drawableStart="@drawable/icon_mail"
+                android:drawablePadding="10dp"
                 android:hint="@string/emailReg"
-                android:paddingEnd="10dp"
+                android:inputType="textEmailAddress"
                 android:paddingStart="10dp"
+                android:paddingEnd="10dp"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
                 android:textSize="15sp" />
 
             <AutoCompleteTextView
                 android:id="@+id/password_registration_txt"
-                android:inputType="textPassword"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/rounded_rect"
-                android:drawablePadding="10dp"
                 android:drawableStart="@drawable/icon_password"
+                android:drawablePadding="10dp"
                 android:hint="@string/passwordReg"
-                android:paddingEnd="10dp"
+                android:inputType="textPassword"
                 android:paddingStart="10dp"
+                android:paddingEnd="10dp"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
                 android:textSize="15sp" />
@@ -98,6 +96,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="8dp"
+                android:onClick="backToLogin"
                 android:text="@string/signin_redirect"
                 android:textColor="@color/white" />
         </LinearLayout>
