--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,15 @@
         android:scaleType="fitStart"
         android:src="@drawable/ic_wave2" />
 
+    <TextView
+        android:id="@+id/email_home_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="10dp"
+        android:layout_toStartOf="@+id/person_profile_img"
+        android:textColor="@color/white" />
+
     <ImageView
         android:id="@+id/person_profile_img"
         android:layout_width="70dp"
@@ -22,6 +31,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         android:contentDescription="@string/person_profile"
+        android:onClick="logout"
         app:srcCompat="@drawable/person_account" />
 
     <LinearLayout
