--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -35,21 +35,6 @@
                 android:src="@drawable/joinus_text" />
 
             <AutoCompleteTextView
-                android:id="@+id/username_registration_txt"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginBottom="10dp"
-                android:background="@drawable/rounded_rect"
-                android:drawableStart="@drawable/icon_person"
-                android:drawablePadding="10dp"
-                android:hint="@string/usernameReg"
-                android:paddingStart="10dp"
-                android:paddingEnd="10dp"
-                android:textColor="@color/white"
-                android:textColorHint="@color/white"
-                android:textSize="15sp" />
-
-            <AutoCompleteTextView
                 android:id="@+id/email_registration_txt"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
@@ -81,12 +66,29 @@
                 android:textColorHint="@color/white"
                 android:textSize="15sp" />
 
+            <AutoCompleteTextView
+                android:id="@+id/password2_registration_txt"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/rounded_rect"
+                android:drawableStart="@drawable/icon_password"
+                android:drawablePadding="10dp"
+                android:hint="@string/password2Reg"
+                android:inputType="textPassword"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white"
+                android:textSize="15sp" />
+
             <Button
                 android:id="@+id/sign_up_registration_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:background="@drawable/btn_gradient"
+                android:onClick="signUp"
                 android:text="@string/sign_upReg"
                 android:textColor="#FFFFFF" />
 
@@ -96,7 +98,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="8dp"
-                android:onClick="backToLogin"
+                android:onClick="backLogin"
                 android:text="@string/signin_redirect"
                 android:textColor="@color/white" />
         </LinearLayout>
