--- a/app/src/main/res/layout/activity_reset_pw.xml
+++ b/app/src/main/res/layout/activity_reset_pw.xml
@@ -16,6 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
             android:layout_marginEnd="50dp"
+            android:layout_marginBottom="50dp"
             android:orientation="vertical">
 
             <ImageView
@@ -31,11 +32,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:layout_marginBottom="15dp"
-                android:contentDescription="@string/sign_in_description"
-                android:src="@drawable/sign_in" />
+                android:contentDescription="@string/password_reset_description"
+                android:src="@drawable/password_reset" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="2dp"
+                android:layout_marginBottom="20dp"
+                android:text="@string/reset_password_instruction"
+                android:textAlignment="center"
+                android:textColor="@color/white" />
 
             <AutoCompleteTextView
-                android:id="@+id/email_log_txt"
+                android:id="@+id/email_reset_txt"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginBottom="10dp"
@@ -50,51 +61,25 @@
                 android:textColorHint="@color/white"
                 android:textSize="15sp" />
 
-            <AutoCompleteTextView
-                android:id="@+id/password_log_txt"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginBottom="10dp"
-                android:background="@drawable/rounded_rect"
-                android:drawableStart="@drawable/icon_password"
-                android:drawablePadding="10dp"
-                android:hint="@string/passwordReg"
-                android:inputType="textPassword"
-                android:paddingStart="10dp"
-                android:paddingEnd="10dp"
-                android:textColor="@color/white"
-                android:textColorHint="@color/white"
-                android:textSize="15sp" />
-
-            <TextView
-                android:id="@+id/forgot_password_log_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="3dp"
-                android:layout_marginBottom="3dp"
-                android:onClick="startResetPw"
-                android:text="@string/forgot_password" />
-
             <Button
-                android:id="@+id/sign_in_btn"
+                android:id="@+id/reset_password_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/btn_gradient"
-                android:onClick="signIn"
-                android:text="@string/sign_inLog"
+                android:onClick="resetPassword"
+                android:text="@string/reset_password"
                 android:textColor="#FFFFFF" />
 
             <TextView
-                android:id="@+id/register_log_txt"
+                android:id="@+id/go_back_reset_password_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp"
-                android:onClick="startRegister"
-                android:text="@string/signup_redirect" />
-
+                android:onClick="backLogin"
+                android:text="@string/go_back_to_sign_in"
+                android:textColor="@color/white" />
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
