--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,12 +27,16 @@
                 android:scaleType="fitCenter"
                 android:src="@drawable/logo" />
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textSize="35sp"
+                android:textColor="@color/white"
+                android:alpha="0.95"
+                android:layout_marginTop="3dp"
                 android:layout_marginBottom="15dp"
-                android:contentDescription="@string/sign_in_description"
-                android:src="@drawable/sign_in" />
+                android:text="@string/sign_inLog" />
 
             <AutoCompleteTextView
                 android:id="@+id/email_log_txt"
@@ -40,7 +44,7 @@
                 android:layout_height="40dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/rounded_rect"
-                android:drawableStart="@drawable/icon_mail"
+                android:drawableStart="@drawable/ic_baseline_email_24"
                 android:drawablePadding="10dp"
                 android:hint="@string/emailReg"
                 android:inputType="textEmailAddress"
@@ -56,7 +60,7 @@
                 android:layout_height="40dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/rounded_rect"
-                android:drawableStart="@drawable/icon_password"
+                android:drawableStart="@drawable/ic_baseline_lock_24"
                 android:drawablePadding="10dp"
                 android:hint="@string/passwordReg"
                 android:inputType="textPassword"
