--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,13 +26,13 @@
     <ImageView
         android:id="@+id/person_profile_img"
         android:layout_width="70dp"
-        android:layout_height="50dp"
+        android:layout_height="45dp"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         android:contentDescription="@string/person_profile"
-        android:onClick="logout"
-        app:srcCompat="@drawable/person_account" />
+        android:onClick="showAccountPopup"
+        app:srcCompat="@drawable/ic_baseline_account_circle_24" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -149,7 +149,6 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_margin="10dp"
-                android:fontFamily="@font/lato_regular"
                 android:gravity="center"
                 android:splitTrack="true"
                 android:switchMinWidth="55dp"
