--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -27,12 +27,16 @@
                 android:scaleType="fitCenter"
                 android:src="@drawable/logo" />
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textSize="35sp"
+                android:textColor="@color/white"
+                android:alpha="0.95"
+                android:layout_marginTop="3dp"
                 android:layout_marginBottom="15dp"
-                android:contentDescription="@string/join_us_description"
-                android:src="@drawable/joinus_text" />
+                android:text="@string/joinUs" />
 
             <AutoCompleteTextView
                 android:id="@+id/email_registration_txt"
@@ -40,7 +44,7 @@
                 android:layout_height="40dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/rounded_rect"
-                android:drawableStart="@drawable/icon_mail"
+                android:drawableStart="@drawable/ic_baseline_email_24"
                 android:drawablePadding="10dp"
                 android:hint="@string/emailReg"
                 android:inputType="textEmailAddress"
@@ -56,7 +60,7 @@
                 android:layout_height="40dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/rounded_rect"
-                android:drawableStart="@drawable/icon_password"
+                android:drawableStart="@drawable/ic_baseline_lock_24"
                 android:drawablePadding="10dp"
                 android:hint="@string/passwordReg"
                 android:inputType="textPassword"
@@ -72,7 +76,7 @@
                 android:layout_height="40dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/rounded_rect"
-                android:drawableStart="@drawable/icon_password"
+                android:drawableStart="@drawable/ic_baseline_lock_24"
                 android:drawablePadding="10dp"
                 android:hint="@string/password2Reg"
                 android:inputType="textPassword"
@@ -99,8 +103,7 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="8dp"
                 android:onClick="backLogin"
-                android:text="@string/signin_redirect"
-                android:textColor="@color/white" />
+                android:text="@string/signin_redirect" />
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
