--- a/app/src/main/res/layout/activity_reset_pw.xml
+++ b/app/src/main/res/layout/activity_reset_pw.xml
@@ -28,12 +28,16 @@
                 android:scaleType="fitCenter"
                 android:src="@drawable/logo" />
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textSize="35sp"
+                android:textColor="@color/white"
+                android:alpha="0.95"
+                android:layout_marginTop="3dp"
                 android:layout_marginBottom="15dp"
-                android:contentDescription="@string/password_reset_description"
-                android:src="@drawable/password_reset" />
+                android:text="@string/passwordReset" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -51,7 +55,7 @@
                 android:layout_height="40dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/rounded_rect"
-                android:drawableStart="@drawable/icon_mail"
+                android:drawableStart="@drawable/ic_baseline_email_24"
                 android:drawablePadding="10dp"
                 android:hint="@string/emailReg"
                 android:inputType="textEmailAddress"
@@ -78,8 +82,7 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp"
                 android:onClick="backLogin"
-                android:text="@string/go_back_to_sign_in"
-                android:textColor="@color/white" />
+                android:text="@string/go_back_to_sign_in" />
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
