--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -14,5 +14,6 @@
         <item name="android:windowBackground">@color/cod_gray</item>
         <item name="color">@color/white</item>
         <item name="fontFamily">@font/lato_regular</item>
+        <item name="android:fontFamily">@font/lato_regular</item>
     </style>
 </resources>
