--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,5 +14,6 @@
         <item name="color">@color/black</item>
         <item name="android:windowBackground">@drawable/new_login_gradients</item>
         <item name="fontFamily">@font/lato_regular</item>
+        <item name="android:fontFamily">@font/lato_regular</item>
     </style>
 </resources>
