--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -96,6 +96,7 @@
                     android:layout_width="0dp"
                     android:layout_height="90dp"
                     android:contentDescription="@string/location_icon"
+                    android:onClick="showSaveLocationOptions"
                     app:srcCompat="@drawable/location" />
 
                 <Space
