--- a/app/src/main/res/drawable/ic_back_track.xml
+++ b/app/src/main/res/drawable/ic_back_track.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="456.339dp"
     android:height="456.339dp"
+    android:alpha="0.7"
     android:viewportWidth="456.339"
-    android:viewportHeight="456.339"
-    android:alpha="0.7">
+    android:viewportHeight="456.339">
     <path
         android:fillColor="#FFFFFF"
         android:pathData="M228.568,456.337c-59.259,0.007 -117.968,-22.905 -161.816,-66.749c-89.003,-89.01 -89.003,-233.824 0,-322.834c89.003,-89.003 233.831,-89.003 322.834,0c89.003,89.01 89.003,233.824 0,322.834c-5.238,5.245 -13.743,5.245 -18.988,0s-5.245,-13.75 0,-18.995c78.53,-78.534 78.53,-206.31 0,-284.844c-78.534,-78.534 -206.317,-78.54 -284.858,0c-78.53,78.534 -78.53,206.31 0,284.844c63.661,63.658 162.83,77.31 241.168,33.2c6.473,-3.658 14.656,-1.343 18.289,5.112c3.64,6.462 1.35,14.652 -5.112,18.289C305.262,446.798 266.796,456.337 228.568,456.337z" />
