--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -39,6 +39,22 @@
                 android:textSize="35sp" />
 
             <AutoCompleteTextView
+                android:id="@+id/username_registration_txt"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/rounded_rect"
+                android:drawableStart="@drawable/ic_baseline_account_circle_24"
+                android:drawablePadding="10dp"
+                android:hint="@string/global_txt_username"
+                android:inputType="textEmailAddress"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white"
+                android:textSize="15sp" />
+
+            <AutoCompleteTextView
                 android:id="@+id/email_registration_txt"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
