--- a/app/src/main/res/layout/activity_reset_pw.xml
+++ b/app/src/main/res/layout/activity_reset_pw.xml
@@ -32,12 +32,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:textSize="35sp"
-                android:textColor="@color/white"
-                android:alpha="0.95"
                 android:layout_marginTop="3dp"
                 android:layout_marginBottom="15dp"
-                android:text="@string/reset_txt_reset_pw" />
+                android:alpha="0.95"
+                android:text="@string/reset_txt_reset_pw"
+                android:textColor="@color/white"
+                android:textSize="35sp" />
 
             <TextView
                 android:layout_width="wrap_content"
