--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         android:contentDescription="@string/layout_desc_person_profile"
-        android:onClick="showAccountPopup"
+        android:onClick="logout"
         app:srcCompat="@drawable/ic_baseline_account_circle_24" />
 
     <LinearLayout
