--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         android:contentDescription="@string/person_profile"
-        android:onClick="showAccountPopup"
+        android:onClick="showAccountDialog"
         app:srcCompat="@drawable/ic_baseline_account_circle_24" />
 
     <LinearLayout
@@ -96,7 +96,8 @@
                     android:layout_width="0dp"
                     android:layout_height="90dp"
                     android:contentDescription="@string/location_icon"
-                    app:srcCompat="@drawable/location" />
+                    app:srcCompat="@drawable/location"
+                    android:onClick="showLocationDialog" />
 
                 <Space
                     android:layout_width="70dp"
@@ -150,7 +151,6 @@
                 android:layout_gravity="center_vertical"
                 android:layout_margin="10dp"
                 android:gravity="center"
-                android:splitTrack="true"
                 android:switchMinWidth="55dp"
                 android:switchPadding="20dp"
                 android:text="@string/infection_status"
