--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -96,8 +96,8 @@
                     android:layout_width="0dp"
                     android:layout_height="90dp"
                     android:contentDescription="@string/location_icon"
-                    app:srcCompat="@drawable/location"
-                    android:onClick="showLocationDialog" />
+                    android:onClick="showLocationDialog"
+                    app:srcCompat="@drawable/location" />
 
                 <Space
                     android:layout_width="70dp"
